--- a/main.html
+++ b/main.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Testimonials</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <section class="testimonials">
+        <div class="testimonial">
+            <p class="text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit."</p>
+            <p class="author">- John Doe</p>
+        </div>
+        <div class="testimonial">
+            <p class="text">"Suspendisse potenti. Fusce a libero nec quam tempor posuere."</p>
+            <p class="author">- Jane Smith</p>
+        </div>
+    </section>
 
 </body>
-
 </html>
+
