--- a/main.html
+++ b/main.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    
     <section class="testimonials">
+		  <h1>Testimonials</h1>
         <div class="testimonial">
             <p class="text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit."</p>
             <p class="author">- John Doe</p>
