--- a/main.html
+++ b/main.html
@@ -9,7 +9,10 @@
 <body>
     
     <section class="testimonials">
-		  <h1>Testimonials</h1>
+		<div>
+			<h1>Testimonials</h1>
+		</div>
+		
         <div class="testimonial">
             <p class="text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit."</p>
             <p class="author">- John Doe</p>
